# QvPlugin-PAC

./: .gitmodules  CMakeLists.txt  PACPlugin.cpp  PACPlugin.hpp  QvPACPlugin.pro  README.md
.github/workflows/: build-simpleplugin.yml
common/: HTTPRequestHelper.hpp
core/: HTTPRequestHelper.cpp  PACConfig.hpp  PACPluginProcessor.cpp  PACPluginProcessor.hpp  PACSystemProxyConfigurator.cpp  PACSystemProxyConfigurator.hpp  QvPACHandler.cpp  QvPACHandler.hpp
pac-core/: QvGFWPACConverter.cpp  QvPACHandler.cpp  QvPACHandler.hpp
ui/: QvPACPluginSettingsWidget.cpp  QvPACPluginSettingsWidget.hpp  QvPACPluginSettingsWidget.ui
